# loom-engine

./: .commit-msg-phase6.txt  .gitignore  .npmignore  CHANGELOG.md  COMMERCIAL_LICENSE_TERMS.md  LICENSE  LOOM-AUDIO-SPEC.md  LOOM-BOSS-RENDER-SPEC.md  LOOM-DIRECTOR-PROTOCOL-V2.md  LOOM-RUST-EXTRACTION-SPEC.md  NOTICE.md  PRIOR-ART.md  README.md  SECURITY-AUDIT-0.11.0.md  SECURITY.md  hierarchy.html  index.html  modules.html  package-lock.json  package.json  reference.html  tsconfig.demo.json  tsconfig.json  typedoc.json
.claude/: launch.json
.github/: dependabot.yml
assets/: hierarchy.js  navigation.js  search.js
classes/: AIActionInterpreter.html  AIBehaviorBuffer.html  Achievements.html  ActionHistory.html  AetherGrid.html  AggroTable.html  AmbientLayerMixer.html  AnimationStatePool.html  AnimationSystem.html  AssetManifest.html  AssetPreloader.html  AssetVariant.html  AssetVirtualizer.html  AttackSystem.html  AttenuationRegistry.html  AudioAssetCache.html  AudioAssetLoader.html  AudioBus.html  AudioCueQueue.html  AudioDuck.html  AudioMixer.html  AuthorityHandoff.html  BehaviorTree.html  BenchmarkHarness.html  BestiaryKernel.html  BiomeMixer.html  BlackSwan.html  BuffLifecycle.html  CameraController.html  CameraDirector.html  Canvas2DDevice.html  ChartRenderer.html  ChatChannel.html  ChatChannelRegistry.html  CinematicLetterbox.html  ClientConsolePluginLogger.html  ClientMapPluginStorage.html  ClientPluginRegistry.html  CognitiveMap.html  ComboCounter.html  (+183 more)
demo/: arpg.html  arpg.js  arpg.js.map  arpg.ts  combat.html  combat.js  combat.js.map  combat.ts  demo.js  demo.js.map  demo.ts  director.html  index.html
docs/: PERF-BENCH-METHODOLOGY.md
functions/: aabb.html  aabbArea.html  aabbCenter.html  aabbContainsAabb.html  aabbContainsPoint.html  aabbExpand.html  aabbFromPoints.html  aabbFromRect.html  aabbHeight.html  aabbIntersection.html  aabbOverlaps.html  aabbRangeQuery.html  aabbRaycastSegment.html  aabbTranslate.html  aabbUnion.html  aabbWidth.html  activeConditions.html  adjustHsl.html  advanceReactionRound.html  applyCondition.html  applyPartialSync.html  applyTick.html  applyTriggeredMutations.html  applyZoneStateChanges.html  approxEq.html  arrive.html  assetGeneration.html  assetSlot.html  attachAuthorityHandoffToWs.html  attachChatChannelToWs.html  attachLagCompensationToWs.html  attachMatchmakingPoolToWs.html  attackAdvantageMode.html  attenuationByModel.html  autoFailSaveCondition.html  bandFromDistanceFt.html  bandWithin.html  beginTransition.html  buildAttackCantripCheck.html  buildAttackSpellCheck.html  (+253 more)
interfaces/: AABB.html  AABBLite.html  AchievementSnapshotEntry.html  AchievementSpec.html  AchievementsOptions.html  ActionHistoryOptions.html  ActionResult.html  ActiveAchievement.html  ActiveBuff.html  ActiveEffect.html  AddResult.html  AdvDetail.html  AetherGridConfig.html  Agent.html  AggroEntry.html  AggroTableOptions.html  AmbientLayerMixerOptions.html  AmbientLayerSetTargetOptions.html  AmbientLayerSnapshot.html  AmbientLayerSpec.html  AnimationClip.html  AppliedMutation.html  ApplyOptions.html  AssetDoneEvent.html  AssetEntry.html  AssetErrorEvent.html  AssetLoadedEvent.html  AssetManifestOptions.html  AssetProgressEvent.html  AssetVariantOptions.html  AssetVariantSpec.html  AssetVirtualizerConfig.html  AtlasDescriptor.html  AttackSystemOptions.html  AttackerStats.html  AttenuationOptions.html  AudioAssetManifest.html  AudioCue.html  AudioCueQueueOptions.html  AudioDuckOptions.html  (+558 more)
landing/: index.html
media/: CHANGELOG.md  LICENSE  LICENSE-HEADER.md  SECURITY-AUDIT-0.10.0.md  npm-publish.yml
python/: README.md  pyproject.toml
python/loom_engine/: __init__.py  event_chain.py  narration_contract.py  pcg32.py  range_bands.py  reaction_economy.py  region_hash.py  region_sync.py  ruleset.py  ruleset_ast.py  srd5e_concentration.py  srd5e_conditions.py  srd5e_pack.py  srd5e_spell_slots.py  world_epoch.py  world_session.py  world_snapshot.py
python/tests/: test_golden_vectors.py  test_narration_contract.py  test_native_surface.py  test_pcg32.py  test_plaza_persistent.py  test_range_bands.py  test_reaction_economy.py  test_region_hash.py  test_ruleset.py  test_ruleset_ast.py  test_ruleset_ast_v2.py  test_srd5e_concentration.py  test_srd5e_conditions.py  test_srd5e_pack.py  test_srd5e_pack_vectors.py  test_srd5e_spell_slots.py  test_version.py  test_world_epoch.py  test_world_session.py  test_world_session_soak.py  test_world_snapshot.py
rust/: .gitignore  Cargo.toml
rust/loom_c_abi/: Cargo.toml  cbindgen.toml  loom_engine.h
rust/loom_c_abi/src/: lib.rs
rust/loom_combat/: Cargo.toml
rust/loom_combat/src/: lib.rs  srd5e_concentration.rs  srd5e_conditions.rs  srd5e_slots.rs
rust/loom_combat/tests/: golden_vectors.rs
rust/loom_epoch/: Cargo.toml
rust/loom_epoch/src/: lib.rs
rust/loom_epoch/tests/: golden_epoch.rs
rust/loom_events/: Cargo.toml
rust/loom_events/src/: lib.rs
rust/loom_events/tests/: golden_event_chain.rs
rust/loom_frame/: Cargo.toml
rust/loom_frame/src/: lib.rs
rust/loom_frame/tests/: golden_frame.rs
rust/loom_math/: Cargo.toml
rust/loom_math/src/: lib.rs
rust/loom_py/: Cargo.toml  pyproject.toml  test_native_parity.py
rust/loom_py/src/: lib.rs
rust/loom_ruleset/: Cargo.toml
rust/loom_ruleset/src/: lib.rs
rust/loom_ruleset/tests/: golden_ast.rs  golden_ast_v2.rs  golden_srd5e_pack.rs
rust/loom_session/: Cargo.toml
rust/loom_session/src/: lib.rs
rust/loom_session/tests/: golden_session.rs  golden_session_soak.rs
rust/loom_snapshot/: Cargo.toml
rust/loom_snapshot/src/: lib.rs
rust/loom_snapshot/tests/: golden_region.rs  golden_snapshot.rs
rust/loom_wasm/: Cargo.toml
rust/loom_wasm/src/: lib.rs
src/: engine.js  engine.js.map  engine.ts  entity.js.map  entity.ts  index.js  index.js.map  index.ts  resources.js.map  resources.ts  system.js  system.js.map  system.ts  world.js  world.js.map  world.ts
test_vectors/: ast_v2_families.json  event_chain_v1.json  srd5e_pack_v1.json  v2_3_0_primitives.json  v3_0_snapshot_canonical.json  v3_3_epoch_tick.json  v3_4_world_session.json  (+7 more)
(+1354 files in other folders)
