# Loom Engine - Rust deterministic core (Phase 3 / v3.0).
#
# One workspace, compiled to many surfaces (WASM for TS, UniFFI/PyO3 for Python,
# a C ABI for C#/Unity + Godot + Go). The SAME compiled core on every surface ->
# byte-identical results for a given seed (the cross-language determinism the
# whole engine-is-truth guarantee depends on). See ../LOOM-RUST-EXTRACTION-SPEC.md.
#
# Phase 1 (this commit): loom_math - the PRNG + integer math. Crates added as the
# migration's strangler-fig phases land (loom_events, loom_ecs, loom_combat,
# then the binding crates loom_wasm / loom_py / loom_c_abi).

[workspace]
resolver = "2"
members = ["loom_math", "loom_combat", "loom_events", "loom_snapshot", "loom_ruleset", "loom_epoch", "loom_session", "loom_frame", "loom_wasm", "loom_c_abi"]
# loom_py is built by maturin, not cargo: its PyO3 `extension-module` feature
# does not link libpython for a plain build, which breaks `cargo test --workspace`.
# It still path-deps the core crates above.
exclude = ["loom_py"]

[workspace.package]
version = "0.1.1"
edition = "2021"
# BUSL-1.1 (source-available, NOT open-source) - matches the npm package + the
# engine's IP boundary. The deterministic world-logic crates (ruleset/epoch/session/
# frame/snapshot) carry this. EXCEPTION: loom_math / loom_events / loom_combat
# pin themselves to "MIT OR Apache-2.0" below - they were first published at 0.1.0
# under that permissive license (commodity primitives: a PCG32 PRNG, an HMAC chain,
# and open-content 5e/PF2e rule adapters - reimplementations of public algorithms),
# and crates.io versions are immutable. They stay permissive for honesty; the
# value-bearing crates are BUSL.
license = "BUSL-1.1"
repository = "https://github.com/sadhaka/loom-engine"

[profile.release]
# Deterministic + small: no platform-specific fast-math, overflow checks off in
# release (the core uses explicit wrapping arithmetic, never relies on overflow).
opt-level = 3
lto = true
codegen-units = 1
