[package]
name = "loom_c_abi"
description = "C ABI surface of the Loom Engine deterministic core - the FFI boundary that unlocks C# (Unity), Godot (GDExtension), Go (cgo), and any C consumer."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
# Binding artifact (ships as compiled .dll/.so/.a via GitHub Releases), not crates.io.
publish = false

[lib]
name = "loom_engine"
# cdylib -> .dll/.so/.dylib for Unity/C# P/Invoke + Godot GDExtension.
# staticlib -> .a/.lib for Go cgo + static native linking.
crate-type = ["cdylib", "staticlib"]

[dependencies]
loom_math = { path = "../loom_math", version = "0.1.2" }
loom_combat = { path = "../loom_combat", version = "0.1.2" }
loom_events = { path = "../loom_events", version = "0.1.2" }
serde_json = "1"
# v3.0 surface: a Unity/Godot/Go client runs the SAME compiled Rust core as the
# browser (WASM) and the Python server (PyO3).
loom_snapshot = { path = "../loom_snapshot", version = "0.1.2" }
loom_epoch = { path = "../loom_epoch", version = "0.1.2" }
loom_session = { path = "../loom_session", version = "0.1.2" }
loom_frame = { path = "../loom_frame", version = "0.1.2" }

[lints.clippy]
float_arithmetic = "deny"
