[package]
name = "loom_combat"
description = "Deterministic combat primitives for the Loom Engine - reaction economy, ruleset adapters (5e/PF2e), range bands."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# ZERO runtime deps. Pure deterministic logic. (Dice live in loom_math; these
# modules are RNG-free - ordering, budgets, ceilings, conditions.)

[dev-dependencies]
# Test-only: the cross-language golden-vector runner parses the SHARED
# test_vectors/*.json. Never linked into the published crate.
serde_json = "1"

[lints.clippy]
float_arithmetic = "deny"
