[package]
name = "loom_events"
description = "Tamper-evident HMAC-SHA256 event chain for the Loom Engine - the Rust core of the server-authoritative event tape, byte-compatible with the TS EventChain."
# 0.1.1: republish exposing `pub fn field` (the published 0.1.0 had it private),
# which loom_snapshot + loom_frame depend on. Still MIT (commodity HMAC chain).
version = "0.1.2"
edition.workspace = true
# Commodity primitive (HMAC-SHA256 chain = RFC-standard crypto); first published at
# 0.1.0 under this permissive license, which is immutable on crates.io.
license = "MIT OR Apache-2.0"
repository.workspace = true

[dependencies]
# Standard, audited HMAC-SHA256. The ALGORITHM is FIPS/RFC-standardized, so for
# identical (key, message) bytes these produce byte-identical output to the
# engine's hand-rolled TS hmacSha256 (verified by the shared golden vectors).
hmac = "0.12"
sha2 = "0.10"
# serde_json::Value is the payload AST. We do NOT use its serializer for the
# canonical form (we hand-write one that matches JS JSON.stringify exactly) -
# Value is only the typed input + parse path.
serde_json = "1"
# UAX #15 Unicode normalization. Used ONLY to REJECT (never normalize) a non-NFC
# signed string at the canonical boundary, so "e"+U+0301 and U+00E9 cannot sign
# as two distinct byte strings across producers that normalize differently. NFC
# is a Unicode-standard algorithm, so is_nfc() agrees with JS `s===s.normalize
# ("NFC")` and Python `unicodedata.is_normalized("NFC", s)` on the same Unicode
# data; the cross-language golden vector pins the tested inputs.
unicode-normalization = "0.1"

[lints.clippy]
# This crate does integer + byte work only; floats in a signed payload are
# rejected fail-closed (determinism rule), never computed on.
float_arithmetic = "deny"
