[package]
name = "loom_math"
description = "Deterministic integer math + RNG for the Loom Engine core - byte-identical across platforms."
version.workspace = true
edition.workspace = true
# Commodity primitive (PCG32 + integer math = public algorithms); first published
# at 0.1.0 under this permissive license, which is immutable on crates.io.
license = "MIT OR Apache-2.0"
repository.workspace = true

[dependencies]
# ZERO dependencies - the deterministic core is pure, no_std-friendly arithmetic.

[lints.clippy]
# Determinism guardrail: floats are banned in the deterministic core. A stray
# f32/f64 fails the build (matches the spec's #![deny(clippy::float_arithmetic)]).
float_arithmetic = "deny"
