# loom_py - the PyO3/maturin surface of the Loom Engine deterministic core.
#
# EXCLUDED from the workspace (see ../Cargo.toml [workspace.exclude]): the
# `extension-module` feature tells PyO3 not to link libpython for a normal build,
# which breaks `cargo test` under the workspace. It is built with maturin instead
# (`maturin build` / `maturin develop`), which supplies the interpreter. Its path
# deps still point at the workspace core crates - one core, every surface.

[package]
name = "loom_py"
# Tracks the engine/wheel version, not the core-crate 0.1.x line. loom_py is
# workspace-excluded + publish=false, so its version is independent; maturin reads
# the wheel version from pyproject ([project].version).
version = "3.1.1"
edition = "2021"
# BUSL-1.1 (matches the engine). Shipped to PyPI as a wheel (loom_engine_native),
# never to crates.io.
license = "BUSL-1.1"
publish = false
repository = "https://github.com/sadhaka/loom-engine"
description = "Native (Rust) Python bindings for the Loom Engine deterministic core, via PyO3 + maturin."

[lib]
# The Python import name. The #[pymodule] fn MUST share this name.
name = "loom_engine_native"
crate-type = ["cdylib"]

[dependencies]
# abi3-py38: build ONE stable-ABI wheel per platform that works on all CPython >=3.8
# (instead of a separate wheel per Python minor). Our bindings are simple
# fn-returning-str/int, fully within the limited API.
pyo3 = { version = "0.29", features = ["extension-module", "abi3-py38"] }
serde_json = "1"
loom_math = { path = "../loom_math", version = "0.1.2" }
loom_combat = { path = "../loom_combat", version = "0.1.2" }
loom_events = { path = "../loom_events", version = "0.1.2" }
# v3.0 surface: the Python server runs the SAME compiled Rust core as the browser.
loom_snapshot = { path = "../loom_snapshot", version = "0.1.2" }
loom_ruleset = { path = "../loom_ruleset", version = "0.1.2" }
loom_epoch = { path = "../loom_epoch", version = "0.1.2" }
loom_session = { path = "../loom_session", version = "0.1.2" }
loom_frame = { path = "../loom_frame", version = "0.1.2" }
