[package]
name = "loom_wasm"
description = "WASM (wasm-bindgen) surface of the Loom Engine deterministic core - for TypeScript / browser / Cloudflare-edge."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
loom_math = { path = "../loom_math" }
loom_combat = { path = "../loom_combat" }
