[package]
name = "loom_wasm"
description = "WASM (wasm-bindgen) surface of the Loom Engine deterministic core - for TypeScript / browser / Cloudflare-edge."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde_json = "1"
loom_math = { path = "../loom_math" }
loom_combat = { path = "../loom_combat" }
# v3.0 surface: the browser runs the SAME compiled Rust core as the server.
loom_snapshot = { path = "../loom_snapshot" }
loom_ruleset = { path = "../loom_ruleset" }
loom_epoch = { path = "../loom_epoch" }
loom_session = { path = "../loom_session" }
loom_frame = { path = "../loom_frame" }
